src/test/ui/span/borrowck-let-suggestion-suffixes.stderr
error[E0597]: `young[..]` does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:43:1
   |
21 |     v2.push(&young[0]);      // statement 4
   |              -------- borrow occurs here
...
43 | }
   | ^ `young[..]` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:25:22
   |
25 |     v3.push(&id('x'));           // statement 6
   |              ------- ^ temporary value dropped here while still borrowed
   |              |
   |              temporary value created here
...
43 | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:32:26
   |
32 |         v4.push(&id('y'));
   |                  ------- ^ temporary value dropped here while still borrowed
   |                  |
   |                  temporary value created here
...
35 |     }                       // (statement 7)
   |     - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:39:22
   |
39 |     v5.push(&id('z'));
   |              ------- ^ temporary value dropped here while still borrowed
   |              |
   |              temporary value created here
...
43 | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to 4 previous errors

